--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=campussync
 
+# temporarily disable spring security for testing
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/campus_sync
 spring.datasource.username=root
